# pd-saf

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c.yml
Resources/: maracatu.pd  mc.meter~.pd  saf.binauraliser~-help.pd  saf.binaural~-help.pd  saf.decoder~-help.pd  saf.encoder~-help.pd  saf.mcbinaural~-help.pd  saf.meter~-help.pd  saf.meter~.pd  saf.panning-help.pd  saf.pitchshifter~-help.pd  saf.roompanning-help.pd  saf.roomsim~-help.pd  test.pd
Sources/: binauraliser~.c  binaural~.c  decoder~.c  encoder~.c  mc.meter~.pd_lua  pitchshifter~.c  roomsim~.c  saf.c  saf.cpp  saf.meter~.pd_lua  saf.panning.pd_lua  saf.projection-help.pd  saf.projection.pd_lua  saf.roompanning.pd_lua  utilities.h
Sources/binaural~/: binaural~.c
Sources/decoder~/: ambi_dec.c  decoder~.c
Sources/encoder~/: ambi_enc.h  encoder~.c
